--- a/curiousLiu/templates/home.html
+++ b/curiousLiu/templates/home.html
@@ -1,1 +1,40 @@
-<h1> "Hello, CuriousLiu!" </h1>
+{% extends 'base.html'%}
+
+{%block content %}
+
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-3">财经类数据分析平台</h1>
+            <p>财经类数据分析平台旨在使用自然语言处理（NLP）相关技术，以公司、机构为维度进行公司相关新闻的数据查询、分析。</p>
+            <p><a class="btn btn-primary btn-lg" href="{%url 'company'%}" role="button">机构信息概览 &raquo;</a></p>
+        </div>
+    </div>
+
+
+    <div class="container">
+    <!-- Example row of columns -->
+        <div class="row">
+            <div class="col-md-4">
+            <h2>公司名称1</h2>
+            <p>公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1+新闻获取时间 </p>
+            <p><a class="btn btn-secondary" href="#" role="button">More &raquo;</a></p>
+            </div>
+            <div class="col-md-4">
+            <h2>Heading</h2>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <p><a class="btn btn-secondary" href="#" role="button">More &raquo;</a></p>
+            </div>
+            <div class="col-md-4">
+            <h2>Heading</h2>
+            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p><a class="btn btn-secondary" href="#" role="button">More &raquo;</a></p>
+            </div>
+        </div>
+    <hr>
+    </div> <!-- /container -->
+
+    <!-- 页面底部的footer text -->
+    <footer class="container">
+        <p>&copy; BUPT 2020</p>
+    </footer>
+{% endblock %}
