--- a/curiousLiu/templates/home.html
+++ b/curiousLiu/templates/home.html
@@ -33,7 +33,7 @@
     <hr>
     </div> <!-- /container -->
 
-    <!-- 页面底部的footer text -->
+    <!-- 页面底部的footer text，目前只设置在home界面展示-->
     <footer class="container">
         <p>&copy; BUPT 2020</p>
     </footer>
