--- a/curiousLiu/templates/updateDescription.html
+++ b/curiousLiu/templates/updateDescription.html
@@ -1,6 +1,11 @@
 {% extends 'base.html'%}
 
 {%block content %}
+    <div class="jumbotron">
+        <div class="container">
+            <h1 class="display-3">版本迭代公告</h1>
+        </div>
+    </div>
 
     <ul>
         {% for item in updateText %}
