--- a/curiousLiu/templates/home.html
+++ b/curiousLiu/templates/home.html
@@ -2,6 +2,27 @@
 
 {%block content %}
 
+    <style type="text/css">
+        .pmargin {
+            width: 350px; 
+            height: 140px; 
+            overflow: hidden; 
+            text-overflow:ellipsis; 
+            display: -webkit-box; 
+            -webkit-box-orient: vertical; 
+            -webkit-line-clamp: 6;
+            text-align:justify!important;
+        }
+        .hmargin{
+            max-width: 350px; 
+            overflow: hidden; 
+            text-overflow:ellipsis; 
+            display: -webkit-box; 
+            -webkit-box-orient: vertical; 
+            -webkit-line-clamp: 1;
+        }
+    </style>
+
     <div class="jumbotron">
         <div class="container">
             <h1 class="display-3">财经类数据分析平台</h1>
@@ -15,18 +36,21 @@
     <!-- Example row of columns -->
         <div class="row">
             <div class="col-md-4">
-            <h2>公司名称1</h2>
-            <p>公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1公司新闻1+新闻获取时间 </p>
+            <h5 class="hmargin">{{ first.companyName }}</h5>
+            <p>{{first.time}}</p>
+            <p class="pmargin">{{first.companyNews}}</p>
             <p><a class="btn btn-secondary" href="#" role="button">More &raquo;</a></p>
             </div>
             <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+            <h5 class="hmargin">{{ second.companyName }}</h5>
+            <p>{{second.time}}</p>
+            <p class="pmargin">{{second.companyNews}}</p>
             <p><a class="btn btn-secondary" href="#" role="button">More &raquo;</a></p>
             </div>
             <div class="col-md-4">
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+                <h5 class="hmargin">{{ third.companyName }}</h5>
+                <p>{{third.time}}</p>
+                <p class="pmargin">{{third.companyNews}}</p>
             <p><a class="btn btn-secondary" href="#" role="button">More &raquo;</a></p>
             </div>
         </div>
