--- a/curiousLiu/templates/base.html
+++ b/curiousLiu/templates/base.html
@@ -1,5 +1,17 @@
 <!doctype html>
 <html lang="en">
+<style type="text/css">
+    
+    .textmargin{
+        margin-right: 25px;
+    }
+    .table_con table {
+        table-layout:fixed;
+    }
+
+</style>
+
+
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -11,11 +23,13 @@
     <title>财经类数据分析平台</title>
     <link rel="icon" href="http://39.105.35.36/media/upload/favicon.ico" type="image/x-icon"/>
   </head>
+
+
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
     
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent" class="table_con">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="{% url 'home' %}">首页 <span class="sr-only">(current)</span></a>
@@ -46,6 +60,7 @@
       </div>
     </nav>
 
+
     {%block content %}
     {% endblock %}
 
@@ -54,5 +69,8 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@latest/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@0.18.0/dist/axios.min.js"></script>
   </body>
 </html>
