--- a/curiousLiu/templates/dbTest.html
+++ b/curiousLiu/templates/dbTest.html
@@ -4,40 +4,46 @@
 
 <!-- 手动使用CSS控制样式 -->
 <style type="text/css">
-    .tablemargin {
-    margin-bottom: 20px;
+    .textmargin{
+        margin-right: 25px;
     }
+    .table_con table {
+        table-layout:fixed;
+    }
+    
+
 </style>
 
-
 <body>
-    
-    <table border="1" align="center" margin-bottom="20px" class="table">
-    <thead class="thead-light" align="center">
+    <div class="table_con">
+
+    <table border="1" align="center"  class="table">
+        
+        <thead class="thead-dark" align="center">
+            <tr>
+                <th  width="124" align="center" valign="middle">#databaseId</th>
+                <th  width="250" align="center" valign="middle">公司名称</th>
+                <th  width="200" align="center" valign="middle">新闻日期</th>
+                <th  width="600" align="center" valign="middle">公司新闻</th>
+            </tr>
+        </thead>
+
+        {% for item in companyInfoObjs %}
         <tr>
-            <th scope="col">#databaseId</th>
-            <th scope="col">公司名称</th>
-            <th scope="col">新闻日期</th>
-            <th scope="col">公司新闻</th>
+            <td  width="124" align="center" valign="middle">{{ item.id }}</td>
+            <td  width="250" align="center" valign="middle">{{ item.companyName }}</td>
+            <td  width="200" align="center" valign="middle">{{ item.time }}</td>
+            <td  width="600">{{ item.companyNews }}</td>
         </tr>
-    </thead>
-    {% for item in companyInfoObjs %}
-        <tr>
-            <td width="50" align="center" valign="middle">{{ item.id }}</td>
-            <td width="250" align="center" valign="middle">{{ item.companyName }}</td>
-            <td width="200" align="center" valign="middle">{{ item.time }}</td>
-            <td width="600">{{ item.companyNews }}</td>
-        </tr>
-    {% endfor %}
+        {% endfor %}
     </table>
+</div>
 
         <nav>
-
             <ul class="pagination justify-content-center">
-                查询展示
-                <span class="count">
-                    (共{{companyInfoObj.}}页）           
-                </span>
+                <p class="textmargin">
+                    共{{sumLen}}条公司信息           
+                </p>
 
                 {% if companyInfoObjs.has_previous %}
                     <li class="page-item">
@@ -86,7 +92,7 @@
                 {% endif %}
             </ul>
         </nav>
-        
+
 
 </body>
 
