--- a/curiousLiu/templates/dbTest.html
+++ b/curiousLiu/templates/dbTest.html
@@ -10,18 +10,21 @@
     .table_con table {
         table-layout:fixed;
     }
-    
+    .inputWidth{
+        width:40px;
+    }
+
 
 </style>
 
 <body>
     <div class="table_con">
 
-    <table border="1" align="center"  class="table">
+    <table border="1" align="center" class="table">
         
         <thead class="thead-dark" align="center">
             <tr>
-                <th  width="124" align="center" valign="middle">#databaseId</th>
+                <th  width="125" align="center" valign="middle">#databaseId</th>
                 <th  width="250" align="center" valign="middle">公司名称</th>
                 <th  width="200" align="center" valign="middle">新闻日期</th>
                 <th  width="600" align="center" valign="middle">公司新闻</th>
@@ -30,7 +33,7 @@
 
         {% for item in companyInfoObjs %}
         <tr>
-            <td  width="124" align="center" valign="middle">{{ item.id }}</td>
+            <td  width="125" align="center" valign="middle">{{ item.id }}</td>
             <td  width="250" align="center" valign="middle">{{ item.companyName }}</td>
             <td  width="200" align="center" valign="middle">{{ item.time }}</td>
             <td  width="600">{{ item.companyNews }}</td>
@@ -40,10 +43,13 @@
 </div>
 
         <nav>
+            
             <ul class="pagination justify-content-center">
-                <p class="textmargin">
-                    共{{sumLen}}条公司信息           
-                </p>
+                
+                <table>   
+                <tr>
+                    
+
 
                 {% if companyInfoObjs.has_previous %}
                     <li class="page-item">
@@ -89,9 +95,39 @@
                     <li class="page-item">
                         <a class="page-link" href="/company?page_id={{companyInfoObjs.next_page_number}}">下一页</a>
                     </li>
-                {% endif %}
+                {% endif %}   
+                
+
+
+                <th >
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">第</span>    
+                    </div>
+        
+                    <input type="text" placeholder="1" class="inputWidth" oninput="value=value.replace(/[^\d]/g,'')">
+        
+                    <div class="input-group-append">
+                    <span class="input-group-text">页</span>
+                    </div>    
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon2">前往</button>
+                </div>
+                </th>
+
+                <td>
+                <p class="textmargin">
+                    共{{sumLen}}条公司信息           
+                </p>
+
+            </td>
+
+                </tr>
+                </table>
             </ul>
+            
         </nav>
+
+        
 
 
 </body>
