--- a/curiousLiu/templates/base.html
+++ b/curiousLiu/templates/base.html
@@ -8,11 +8,17 @@
     .table_con table {
         table-layout:fixed;
     }
+    #head2 [data-fixed="fixed"]{
+      position: fixed;
+      top:0;
+      left: 0;
+      margin: 0;
+   }
 
 </style>
 
 
-  <head>
+  <head2>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -22,7 +28,7 @@
 
     <title>财经类数据分析平台</title>
     <link rel="icon" href="http://39.105.35.36/media/upload/favicon.ico" type="image/x-icon"/>
-  </head>
+  </head2>
 
 
   <body>
